--- a/app/src/main/res/layout/fragmentlayout3.xml
+++ b/app/src/main/res/layout/fragmentlayout3.xml
@@ -4,11 +4,22 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/testName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="223dp"
-        android:text="첫째" />
+        android:layout_marginStart="114dp"
+        android:layout_marginTop="128dp"
+        android:text="testing3" />
+
+    <TextView
+        android:id="@+id/testNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/testName"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="184dp"
+        android:text="phoneNumber" />
+
 </RelativeLayout>
