--- a/app/src/main/res/layout/activity_moyeo.xml
+++ b/app/src/main/res/layout/activity_moyeo.xml
@@ -7,9 +7,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="모인 친구들"
+        android:fontFamily="@font/BMDOHYEON_ttf"
         android:textSize="30sp"
         android:textColor="#000000"
-        android:textStyle="bold"
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
         />
