--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="심부름" />
+            android:text="모여라" />
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
