--- a/app/src/main/res/layout/activity_moyeo.xml
+++ b/app/src/main/res/layout/activity_moyeo.xml
@@ -7,7 +7,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="모인 친구들"
-        android:fontFamily="@font/BMDOHYEON_ttf"
         android:textSize="30sp"
         android:textColor="#000000"
         android:layout_marginTop="40dp"
@@ -24,12 +23,12 @@
         android:onClick="btnRefresh"
         android:src="@drawable/refresh" />
 
-    <GridView
+    <ListView
         android:id="@+id/moyeoList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numColumns="2">
 
-    </GridView>
+    </ListView>
 
 </LinearLayout>
