--- a/app/src/main/res/layout/moyeo_item.xml
+++ b/app/src/main/res/layout/moyeo_item.xml
@@ -8,5 +8,5 @@
         android:id="@+id/nameItemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:textSize="40dp"/>
 </LinearLayout>
